--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,59 @@
-@font-face {
+/* @font-face {
   font-family: 'Gotham Pro';
   src: local('Gotham Pro Light'), local('Gotham-Pro-Light'),
-      url('../font/GothamPro-Light.woff2') format('woff2'),
+      url('../font/') format('woff2'),
       url('../font/GothamPro-Light.woff') format('woff'),
       url('../font/GothamPro-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
+} */
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url("../font/GothamPro-Bold.eot");
+  src: url("../font/GothamPro-Bold.eot#iefix") format("embedded-opentype"),
+    url("../font/GothamPro-Bold.woff") format("woff"),
+    url("../font/GothamPro-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url("../font/GothamPro-Light.eot");
+  src: url("../font/GothamPro-Light.eot#iefix") format("embedded-opentype"),
+    url("../font/GothamPro-Light.woff") format("woff"),
+    url("../font/GothamPro-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url("../font/GothamPro-Medium.eot");
+  src: url("../font/GothamPro-Medium.eot#iefix") format("embedded-opentype"),
+    url("../font/GothamPro-Medium.woff") format("woff"),
+    url("../font/GothamPro-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url("../font/GothamPro.eot");
+  src: url("../font/GothamPro.eot#iefix") format("embedded-opentype"),
+    url("../font/GothamPro.woff") format("woff"),
+    url("../font/GothamPro.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
 }
 
 h1,
@@ -20,7 +68,7 @@ span,
 li,
 ul,
 input {
-  font-family: 'Gotham Pro';
+  font-family: 'Gotham Pro' , sans-serif;
 }
 
 html {
