--- a/components/Info/Info.module.scss
+++ b/components/Info/Info.module.scss
@@ -42,6 +42,9 @@
       }
     }
     .second {
+      .video {
+        display: none;
+      }
       h1 {
         font-family: "Gotham Pro";
         font-style: normal;
@@ -89,11 +92,107 @@
   }
 }
 
-@media screen and (max-width: 1720px) {
+@media screen and (max-width: 768px) {
   .container {
     .info_block {
       .first {
+        align-items: center;
         .one {
+          padding: 52px 26px 41px 26px;
+          background-size: cover;
+          background-position: center;
+          background-repeat: no-repeat;
+          width: 600px;
+          li {
+            font-size: 16px;
+          }
+        }
+        .two {
+          iframe {
+            width: 600px;
+            height: 330px;
+          }
+        }
+      }
+      .second {
+        h1 {
+          font-size: 30px;
+        }
+        h3 {
+          font-size: 18px;
+        }
+        p {
+          font-size: 14px;
+        }
+        .under_block {
+          h1 {
+            font-size: 16px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 666px) {
+  .container {
+    .info_block {
+      .first {
+        align-items: center;
+        .one {
+          width: 400px;
+        }
+        .two {
+          iframe {
+            width: 400px;
+            height: 230px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .container {
+    .info_block {
+      flex-wrap: wrap;
+      .first {
+        align-items: center;
+        .one {
+          width: 360px;
+          height: 280px;
+          gap: 10px;
+          li {
+            font-size: 14px;
+          }
+        }
+        .two {
+          display: none;
+          iframe {
+            width: 360px;
+            height: 211.09px;
+          }
+        }
+      }
+      .second {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        .video {
+          display: block;
+          padding-top: 49px;
+          iframe {
+            width: 360px;
+            height: 211.09px;
+          }
+        }
+        p {
+          display: none;
+        }
+        .under_block {
+          width: 90%;
         }
       }
     }
