--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: 'Gotham Pro';
-  src: local('Gotham Pro Light'), local('Gotham-Pro-Light'),
-      url('../font/GothamPro-Light.woff2') format('woff2'),
-      url('../font/GothamPro-Light.woff') format('woff'),
-      url('../font/GothamPro-Light.ttf') format('truetype');
+  font-family: "Gotham Pro";
+  src: local("Gotham Pro Light"), local("Gotham-Pro-Light"),
+    url("../font/GothamPro-Light.woff2") format("woff2"),
+    url("../font/GothamPro-Light.woff") format("woff"),
+    url("../font/GothamPro-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
@@ -20,7 +20,7 @@ span,
 li,
 ul,
 input {
-  font-family: 'Gotham Pro';
+  font-family: "Gotham Pro";
 }
 
 html {
@@ -28,21 +28,37 @@ html {
   font-size: 16px;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
