--- a/components/DeliveryDetails/DeliveryDetails.module.scss
+++ b/components/DeliveryDetails/DeliveryDetails.module.scss
@@ -1,12 +1,9 @@
 .delivery_section {
   width: 100%;
-  height: auto;
   background: url("../../public/bac.png") no-repeat center;
-  // background-size: cover;
   .delivery_section__block {
     max-width: 1140px;
     width: 100%;
-    height: 1080px;
     margin: 0 auto;
     .delivery_section__cards {
       width: 100%;
@@ -44,6 +41,7 @@
           position: relative;
           width: 330px;
           padding-bottom: 50px;
+          transition: 0.5s;
           background: #ffffff;
           border-radius: 18px 0px 18px 0px;
           .delivery_card_img {
@@ -82,9 +80,7 @@
               font-size: 22px;
               line-height: 150%;
               margin-top: 42px;
-
               letter-spacing: -0.05em;
-
               color: #000000;
             }
             h3 {
@@ -93,7 +89,6 @@
               font-size: 12px;
               line-height: 150%;
               margin-top: 6px;
-
               color: #5b5b5b;
             }
             p {
@@ -104,12 +99,14 @@
               font-size: 12px;
               line-height: 150%;
               margin-left: 14px;
-
               color: #000000;
             }
           }
         }
       }
+    }
+    .delivery_card:hover {
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
     .delivery_section_statistics {
       width: 100%;
@@ -149,22 +146,18 @@
           display: flex;
           align-items: center;
           justify-content: center;
-
           font-style: normal;
           font-weight: 400;
           font-size: 16px;
           line-height: 150%;
           text-align: center;
           color: #000000;
-
           border: 2px solid #c4c4c4;
         }
       }
       .delivery_section_statistics__main {
         width: 100%;
-        // height: 250px;
         margin-top: 45px;
-        overflow-x: scroll;
         display: flex;
         justify-content: space-between;
         .delivery_section_statistics__main_card {
@@ -246,9 +239,9 @@
   }
   .delivery_section_statistics__main {
     gap: 70px;
+    overflow-x: scroll;
   }
 }
-
 @media screen and (max-width: 560px) {
   .delivery_section {
     padding: 0 4% 0 4%;
