--- a/components/Pirce/Price.module.scss
+++ b/components/Pirce/Price.module.scss
@@ -40,6 +40,25 @@
             font-weight: bold;
           }
         }
+        .adaptive {
+          display: none;
+          margin-top: 72px;
+          h3 {
+            margin-top: 16px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            font-family: "Gotham Pro";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 150%;
+            color: #000000;
+            span {
+              font-weight: bold;
+            }
+          }
+        }
         .important_block {
           margin-top: 72px;
           display: flex;
@@ -54,6 +73,9 @@
             font-size: 18px;
             line-height: 150%;
             color: #000000;
+            span {
+              font-weight: bold;
+            }
           }
         }
       }
@@ -73,12 +95,13 @@
           display: flex;
           align-items: center;
           justify-content: space-between;
-          background: #ffffff;
+          background: #f3f5f6;
           border-radius: 0px 0px 18px 0px;
           width: 560px;
           height: 241px;
           padding: 50px;
           cursor: pointer;
+          gap: 40px;
           .first {
             p {
               font-family: "Gotham Pro";
@@ -87,6 +110,8 @@
               font-size: 13px;
               line-height: 150%;
               color: #000000;
+              display: flex;
+              flex-direction: row;
             }
             h1 {
               padding-top: 4px;
@@ -107,6 +132,8 @@
               gap: 9px;
             }
             div > li {
+              align-items: center;
+              display: flex;
               font-family: "Gotham Pro";
               font-style: normal;
               font-weight: 700;
@@ -117,6 +144,7 @@
             }
             h3 {
               padding-top: 19px;
+              font-size: 14px;
             }
           }
           .second {
@@ -156,7 +184,7 @@
       text-transform: uppercase;
       color: #e31e24;
       border: none;
-      background: #ffffff;
+      background: #f3f5f6;
       border-radius: 0px 0px 18px 0px;
       padding: 22px;
       transition: 0.3s;
@@ -164,6 +192,72 @@
     }
     button:hover {
       scale: 1.05;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .background {
+    .container {
+      .price {
+        .title {
+          h1 {
+            font-size: 40px;
+          }
+          p {
+            font-size: 18px;
+          }
+          .important_block {
+            h3 {
+              font-size: 16px;
+            }
+          }
+        }
+        .content {
+          .block {
+            .first {
+              h1 {
+                font-size: 18px;
+              }
+              div > li {
+                font-style: normal;
+                font-weight: 200;
+                font-size: 13px;
+              }
+              h3 {
+              }
+            }
+            .second {
+              h1 {
+                font-weight: 400;
+                font-size: 22px;
+                line-height: 24px;
+                text-align: right;
+                letter-spacing: -0.05em;
+              }
+            }
+          }
+        }
+      }
+      button {
+        font-size: 18px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 425px) {
+  .background {
+    .container {
+      .price {
+        .title {
+          .important_block {
+            display: none;
+          }
+          .adaptive {
+            display: block;
+          }
+        }
+      }
     }
   }
 }
