--- a/components/Pirce/Price.module.scss
+++ b/components/Pirce/Price.module.scss
@@ -144,7 +144,12 @@
             }
             h3 {
               padding-top: 19px;
-              font-size: 14px;
+              font-family: "Gotham Pro";
+              font-style: normal;
+              font-weight: 300;
+              font-size: 18px;
+              line-height: 150%;
+              color: #000000;
             }
           }
           .second {
@@ -225,6 +230,8 @@
                 font-size: 13px;
               }
               h3 {
+                font-size: 16px;
+                line-height: 120%;
               }
             }
             .second {
@@ -255,6 +262,15 @@
           }
           .adaptive {
             display: block;
+          }
+        }
+        .content {
+          .block {
+            .first {
+              h3 {
+                font-size: 14px;
+              }
+            }
           }
         }
       }
