--- a/components/Pirce/Price.module.scss
+++ b/components/Pirce/Price.module.scss
@@ -1,5 +1,6 @@
 ﻿.background {
   position: relative;
+  background-color: gray;
   .particle {
     position: absolute;
     z-index: -1;
@@ -88,6 +89,7 @@
         gap: 24px;
         .block:hover {
           scale: 1.05;
+          border-radius: 18px 18px 0 18px;
         }
         .block {
           transition: 0.3s;
@@ -197,6 +199,7 @@
     }
     button:hover {
       scale: 1.05;
+      border-radius: 18px 18px 0 18px;
     }
   }
 }
