--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -3,28 +3,25 @@
   position: absolute;
   top: 0;
   left: 0;
-  display: none;
   z-index: 100;
   .header_block {
-    max-width: 1920px;
+    max-width: 1140px;
     width: 100%;
-    height: 130px;
     margin: 0 auto;
     display: flex;
     .header__left_block {
+      float: left;
       width: 400px;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      border: 1px solid black;
       h3 {
         font-style: normal;
         font-weight: 700;
         font-size: 28px;
         line-height: 27px;
-
+        margin-bottom: 12px;
         letter-spacing: -0.05em;
-
         color: #dbcbb4;
       }
       a {
@@ -32,35 +29,29 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 15px;
-        margin-top: 12px;
         text-decoration-line: underline;
         cursor: pointer;
-
         color: #ffffff;
       }
     }
     .header__right_block {
-      //  max-width: 1170px;
+      max-width: 1170px;
       width: 100%;
       height: 128px;
-
       display: flex;
       align-items: center;
-      padding-left: 64px;
-      //  background: #0f1729;
+      justify-content: center;
       background: rgba(15, 23, 41, 0.5);
-      //  opacity: 0.3;
       border-radius: 0px 0px 0px 15px;
       .header__nav {
         max-width: 643px;
         width: 100%;
         display: flex;
         justify-content: space-between;
-        border: 1px solid yellow;
         a {
           font-style: normal;
-          font-weight: 400;
-          font-size: 14px;
+          font-weight: 410;
+          font-size: 15px;
           line-height: 15px;
           text-decoration: none;
           letter-spacing: -0.03em;
@@ -71,3 +62,57 @@
     }
   }
 }
+
+.header_down_block{
+  max-width: 1140px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  border: 1px solid black;
+}
+
+@media screen and (max-width: 1145px) {
+  .header_block{
+    padding: 0 0 0 2%;
+  }
+}
+
+@media screen and (max-width: 952px) {
+  .header_block{
+    flex-direction: column-reverse;
+  }
+  .header__left_block{
+    width: 500px !important;
+    margin-top: 30px;
+    flex-direction: row !important;
+    justify-content: initial !important;
+    h3{
+      margin-right: 20px !important;
+      font-size: 23px !important;
+    }
+    a{
+      margin-top: 8px !important;
+      font-size: 14px !important;
+    }
+  }
+  .header__nav{
+    padding: 0 2% 0 2%;
+  }
+}
+
+@media screen  and (max-width: 744px) {
+  .header__right_block{
+    display: none !important;
+  }
+  .header__left_block{
+    width: 240px !important;
+    h3{
+      white-space: nowrap;
+    }
+    a{
+      display: none !important;
+    }
+  }
+}
+
+
