--- a/components/DeliveryDetails/DeliveryDetails.module.scss
+++ b/components/DeliveryDetails/DeliveryDetails.module.scss
@@ -4,7 +4,7 @@
   .delivery_section__block {
     max-width: 1140px;
     width: 100%;
-    margin: 0 auto;
+    margin: 30px auto;
     .delivery_section__cards {
       width: 100%;
       .delivery_section__cards__title {
