--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -225,8 +225,15 @@
 }
 
 @media screen and (max-width: 400px) {
+  .hero_section{
+    height: 580px !important;
+  }
   .hero_section__contain_info__social{
     max-width: 116px !important;
+    img{
+      width: 27px !important;
+      height: 27px !important;
+    }
   }
   .hero_section__contain_text__block {
     width: 100% !important;
