--- a/components/ContactUs/ContactUs.module.scss
+++ b/components/ContactUs/ContactUs.module.scss
@@ -4,7 +4,7 @@
   height: 835px;
   iframe {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     width: 100%;
     height: 100%;
   }
@@ -16,8 +16,10 @@
     display: flex;
     align-items: flex-end;
     .contact_us_section__wrapper__block {
+      position: relative;
       width: 420px;
       height: 589px;
+      z-index: 3;
 
       background: #ffffff;
       border-radius: 18px 0px 0px 0px;
