--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -30,6 +30,7 @@
     position: absolute;
     width: 240px;
     height: 61.41px;
+    z-index: 4;
     right: 0;
     top: -35px;
     font-family: "Inter";
