--- a/components/Services/Services.module.scss
+++ b/components/Services/Services.module.scss
@@ -6,60 +6,59 @@
   margin: 0 auto;
 }
 
-.service__row {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  position: absolute;
-}
-
-.services__content_first {
+.services__content {
   width: 100%;
   display: flex;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
   position: absolute;
   top: 70px;
 }
-.services__content_second {
-  width: 100%;
+
+.services__item {
+  width: 300px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  position: absolute;
-  top: 215px;
+  margin-bottom: 90px;
 }
 
-.services__left {
-  width: 276px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-right: 40px;
-}
-.services__center {
-  width: 276px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-right: 40px;
-}
-.services__right {
-  width: 276px;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-right: 40px;
-}
 .services__text {
   font-weight: 700;
-  font-size: 12px;
+  font-size: 14px;
   line-height: 24px;
   color: #000000;
   max-width: 215px;
+  width: 100%;
 }
 .card__img {
   border-radius: 5px;
-  margin-right: 20px;
   border-radius: 8px 0px;
+  margin-right: 60px;
+  max-width: 90px;
+  width: 100%;
+  height: 90px;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 640px) {
+  .services__item {
+    margin-bottom: 30px;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 1180px) {
+  .services__content {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    .services__text {
+      margin: 15px;
+    }
+  }
 }
