--- a/components/Customer/Customer.module.scss
+++ b/components/Customer/Customer.module.scss
@@ -1,13 +1,13 @@
 .customer_section {
   max-width: 1140px;
   width: 100%;
-  margin: 0 auto;
+  margin: 60px auto;
   margin-bottom: 100px;
   h1 {
     line-height: 1.2em;
     font-style: normal;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 70px;
 	 text-align: center;
     line-height: 140%;
 	 margin-bottom: 50px;
