--- a/components/Info/Info.module.scss
+++ b/components/Info/Info.module.scss
@@ -52,7 +52,7 @@
         font-size: 40px;
         line-height: 140%;
         text-transform: uppercase;
-        color: #e31e24;
+        color: #1e9ee3;
       }
       h3 {
         padding-top: 12px;
