--- a/components/ContactUs/ContactUs.module.scss
+++ b/components/ContactUs/ContactUs.module.scss
@@ -101,6 +101,8 @@
           display: flex;
           justify-content: space-between;
           img {
+            width: 45px;
+            height: 50px;
             cursor: pointer;
           }
         }
