--- a/components/DeliveryDetails/DeliveryDetails.module.scss
+++ b/components/DeliveryDetails/DeliveryDetails.module.scss
@@ -15,6 +15,7 @@
           font-weight: 900;
           font-size: 70px;
           margin-right: 17px;
+          white-space: nowrap;
           line-height: 140%;
           letter-spacing: -0.05em;
           text-transform: uppercase;
@@ -39,7 +40,7 @@
         gap: 10px;
         .delivery_card {
           position: relative;
-          width: 330px;
+          width: 530px;
           padding-bottom: 50px;
           transition: 0.5s;
           background: #ffffff;
@@ -73,11 +74,11 @@
           .delivery_card__main {
             width: 100%;
             border-radius: 0px 0px 18px 0px;
-            padding: 0 5px 0 40px;
+            padding: 0 5px 0 20px;
             h2 {
               font-style: normal;
-              font-weight: 600;
-              font-size: 22px;
+              font-weight: 700;
+              font-size: 24px;
               line-height: 150%;
               margin-top: 42px;
               letter-spacing: -0.05em;
@@ -85,11 +86,11 @@
             }
             h3 {
               font-style: normal;
-              font-weight: 400;
-              font-size: 12px;
+              font-weight: 410;
+              font-size: 17px;
               line-height: 150%;
               margin-top: 6px;
-              color: #5b5b5b;
+              color: #000000;
             }
             p {
               max-width: 200px;
@@ -245,9 +246,15 @@
     margin-bottom: 200px !important;
   }
 }
-@media screen and (max-width: 560px) {
+@media screen and (max-width: 570px) {
   .delivery_section {
     padding: 0 4% 0 4%;
+  }
+  .delivery_section__cards__title{
+    h1{
+      white-space: pre-wrap !important;
+      font-size: 50px !important;
+    }
   }
   .delivery_card {
     p {
