--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -43,7 +43,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .hero_section__contain_info_logo{
+      .hero_section__contain_info_logo {
         width: 260px;
         height: 80px;
       }
@@ -66,17 +66,22 @@
         }
       }
       .hero_section__contain_info__social {
-        max-width: 176px;
+        max-width: 186px;
         width: 100%;
         display: flex;
         justify-content: space-between;
+        img{
+          width: 50px;
+          height: 45px;
+          cursor: pointer;
+        }
       }
     }
     .hero_section__contain_text {
       position: relative;
       max-width: 999px;
       width: 100%;
-      height: 155px;
+      height: 235px;
       margin-top: 161px;
       h1 {
         font-style: normal;
@@ -95,7 +100,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        right: 0;
+        left: 0;
         background: #ffffff;
         p {
           font-style: normal;
@@ -112,7 +117,7 @@
       max-width: 930px;
       width: 100%;
       height: 70px;
-      margin-top: 40px;
+      margin-top: 10px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -143,7 +148,7 @@
         border-radius: 15px 0px;
         cursor: pointer;
       }
-      button:hover{
+      button:hover {
         transform: scale(1.1);
       }
     }
@@ -168,28 +173,28 @@
       font-size: 49px !important;
     }
     .hero_section__contain_text__block {
-      bottom: 45px !important;
+      // bottom: 45px !important;
     }
   }
 }
 
 @media screen and (max-width: 952px) {
-  .hero_section__contain_info{
+  .hero_section__contain_info {
     padding-top: 270px !important;
   }
 }
 
 @media screen and (max-width: 901px) {
   .hero_section__contain_text__block {
-    bottom: 45px !important;
+    // bottom: 45px !important;
     left: 0 !important;
-    top: 120px;
+    // top: 120px;
   }
 }
 
 @media screen and (max-width: 744px) {
   .hero_section {
-    height: 550px !important;
+    height: 470px !important;
   }
   .hero_section__contain_info {
     margin-top: 0px !important;
@@ -204,7 +209,6 @@
     }
   }
   .hero_section__contain_text {
-    max-width: 320px !important;
     margin-top: 81px !important;
     h1 {
       font-size: 30px !important;
@@ -212,14 +216,14 @@
   }
   .hero_section__contain_text__block {
     width: 310px !important;
-    top: 130px;
+    top: 110px;
     p {
       font-size: 14px !important;
     }
   }
   .hero_section__contain__request {
     display: block !important;
-    margin-top: 50px !important;
+    margin-top: -30px !important;
     h4 {
       font-size: 18px !important;
     }
@@ -232,18 +236,19 @@
   }
 }
 
-@media screen and (max-width: 400px) {
-  .hero_section{
-    height: 580px !important;
+@media screen and (max-width: 425px) {
+  .hero_section {
+    height: 470px !important;
   }
-  .hero_section__contain_info__social{
+  .hero_section__contain_info__social {
     max-width: 116px !important;
-    img{
+    img {
       width: 27px !important;
       height: 27px !important;
     }
   }
   .hero_section__contain_text__block {
     width: 100% !important;
+    top: 160px;
   }
 }
