--- a/components/Customer/Customer.module.scss
+++ b/components/Customer/Customer.module.scss
@@ -4,33 +4,34 @@
   margin: 60px auto;
   margin-bottom: 100px;
   h1 {
+    max-width: 1140px;
+    width: 100%;
     line-height: 1.2em;
     font-style: normal;
     font-weight: 700;
     font-size: 70px;
-	 text-align: center;
+    text-align: center;
     line-height: 140%;
-	 margin-bottom: 50px;
+    margin-bottom: 50px;
     letter-spacing: -0.05em;
     text-transform: uppercase;
     color: #e31e24;
   }
 }
 
-
 @media screen and (max-width: 767px) {
-	.customer_section{
-		padding-top: 60px !important;
-		h1{
-			font-size: 50px !important;
-		}
-	}
+  .customer_section {
+    padding-top: 60px !important;
+    h1 {
+      font-size: 50px !important;
+    }
+  }
 }
 
 @media screen and (max-width: 467px) {
-	.customer_section{
-		h1{
-			font-size: 35px !important;
-		}
-	}
+  .customer_section {
+    h1 {
+      font-size: 35px !important;
+    }
+  }
 }
