--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -60,6 +60,9 @@
         }
       }
     }
+    .burger_menu {
+      display: none;
+    }
   }
 }
 
@@ -87,11 +90,11 @@
       color: #ffffff;
     }
   }
-  .header_down_block__burger{
+  .header_down_block__burger {
     max-width: 300px;
     width: 100%;
     display: none;
-    img{
+    img {
       cursor: pointer;
     }
   }
@@ -123,19 +126,19 @@
   .header_block {
     padding: 0 0 0 2%;
   }
-  .header_down_block{
+  .header_down_block {
     padding: 0 2% 0 2%;
   }
 }
 
 @media screen and (max-width: 1085px) {
-  .header_down_block__nav{
+  .header_down_block__nav {
     display: none !important;
   }
-  .header_down_block__burger{
+  .header_down_block__burger {
     display: block !important;
   }
-  .header_down_block__social{
+  .header_down_block__social {
     width: 400px !important;
     justify-content: flex-end !important;
     gap: 25px !important;
@@ -179,21 +182,25 @@
       display: none !important;
     }
   }
-  .header_down_block{
+  .header_block {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .header_down_block {
     padding: 0 4% 0 4% !important;
-    .header_down_block__burger{
+    .header_down_block__burger {
       max-width: 60px !important;
       display: flex !important;
       order: 3 !important;
       justify-content: flex-end !important;
     }
-    .header_down_block__social{
+    .header_down_block__social {
       max-width: 150px !important;
       width: 100% !important;
       order: 1 !important;
       justify-content: flex-start !important;
     }
-    .header_down_block__number{
+    .header_down_block__number {
       max-width: 500px !important;
       width: 100% !important;
       display: flex !important;
@@ -201,18 +208,23 @@
       order: 2 !important;
     }
   }
+  .burger_menu {
+    display: block !important;
+    position: fixed;
+    right: 0;
+  }
 }
 
 @media screen and (max-width: 400px) {
-  .header_down_block__number{
-    a{
+  .header_down_block__number {
+    a {
       font-size: 16px !important;
     }
   }
-  .header_down_block__social{
+  .header_down_block__social {
     gap: 15px !important;
   }
-  .header_down_block__burger{
+  .header_down_block__burger {
     max-width: 40px !important;
   }
 }
