--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -132,6 +132,11 @@
         letter-spacing: -0.03em;
         color: #ffffff;
       }
+      a{
+        max-width: 264px;
+        width: 100%;
+        text-decoration: none;
+      }
       button {
         max-width: 264px;
         width: 100%;
@@ -172,9 +177,6 @@
     h1 {
       font-size: 49px !important;
     }
-    .hero_section__contain_text__block {
-      // bottom: 45px !important;
-    }
   }
 }
 
@@ -186,15 +188,16 @@
 
 @media screen and (max-width: 901px) {
   .hero_section__contain_text__block {
-    // bottom: 45px !important;
     left: 0 !important;
-    // top: 120px;
   }
 }
 
 @media screen and (max-width: 744px) {
   .hero_section {
     height: 470px !important;
+  }
+  .hero_section__contain_info__social{
+    margin-top: 110px;
   }
   .hero_section__contain_info {
     margin-top: 0px !important;
