--- a/components/Logistic/Logistic.module.scss
+++ b/components/Logistic/Logistic.module.scss
@@ -60,3 +60,14 @@
     }
   }
 }
+
+@media screen and (max-width: 415px) {
+  .logistic_section__block {
+    h1 {
+      font-size: 22px !important;
+    }
+    p {
+      font-size: 14px !important;
+    }
+  }
+}
