--- a/components/DeliveryDetails/DeliveryDetails.module.scss
+++ b/components/DeliveryDetails/DeliveryDetails.module.scss
@@ -82,12 +82,13 @@
               line-height: 150%;
               margin-top: 42px;
               letter-spacing: -0.05em;
-              color: #000000;
+              color: #e31e24;
             }
             h3 {
+              text-align: left;
               font-style: normal;
               font-weight: 410;
-              font-size: 17px;
+              font-size: 18px;
               line-height: 150%;
               margin-top: 6px;
               color: #000000;
