--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -24,7 +24,10 @@
         letter-spacing: -0.05em;
         color: #dbcbb4;
       }
-      a {
+      a:nth-child(1){
+        text-decoration: none;
+      }
+      a:nth-child(2) {
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
@@ -178,7 +181,7 @@
     h3 {
       white-space: nowrap;
     }
-    a {
+    a:nth-child(2) {
       display: none !important;
     }
   }
