--- a/components/RecentDeliveries/RecentDeliveries.module.scss
+++ b/components/RecentDeliveries/RecentDeliveries.module.scss
@@ -96,7 +96,6 @@
         background: #f3f5f6;
         border-radius: 0px 0px 18px 0px;
         h2 {
-          font-family: "Gotham Pro";
           font-style: normal;
           font-weight: 300;
           font-size: 13px;
@@ -104,25 +103,37 @@
           color: #000000;
         }
         h1 {
+          max-width: 700px;
+          width: 100%;
           font-style: normal;
           font-weight: 410;
           font-size: 22px;
-          white-space: nowrap;
           line-height: 24px;
-          margin-top: 8px;
+          margin-top: 40px;
           letter-spacing: 0.15em;
           text-transform: uppercase;
-          @include font-size(22px, 17px, 19px, 21px);
+          text-align: left;
+          @include font-size(21px, 17px, 19px, 21px);
           color: #000000;
+          span{
+            font-style: normal;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 120%;
+            margin-left: 7px;
+            text-align: left;
+            color: red;
+          }
         }
         h6 {
+          position: absolute;
+          top: 700px;
           font-style: normal;
           font-weight: 410;
-          font-size: 20px;
           line-height: 20px;
           text-transform: uppercase;
-          margin-top: 50px;
-          @include font-size(18px, 15px, 17px, 18px);
+          margin-bottom: 60px;
+          @include font-size(22px, 15px, 17px, 18px);
           color: #000000;
           a {
             text-decoration: none;
